--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
 </head>
 
 <body>
-
     <header>
         <h1>Diacritics Eraser</h1>
     </header>
-
-
 
     <main>
         <textarea id="textbox"></textarea>
@@ -36,10 +33,8 @@
         </div>
     </main>
 
-
-
     <footer>
-        <p>© 2022 M.J Brechner</p>
+        <p>© 2022 M.J. Brechner</p>
     </footer>
 
     <script src="javascript/index.js" async defer></script>
