--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Diacritics Eraser</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="shortcut icon" href="images/favicon-32.png" sizes="32x32">
+    <link rel="shortcut icon" href="images/favicon-32.png" sizes="32x32">
     <link rel="shortcut icon" href="images/favicon-128.png" sizes="128x128">
     <link rel="shortcut icon" href="images/favicon-180.png" sizes="180x180">
-    <link rel="shortcut icon" href="images/favicon-192.png" sizes="192x192"> -->
+    <link rel="shortcut icon" href="images/favicon-192.png" sizes="192x192">
 
     <!-- Roboto Mono from Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
