changed message for copying text

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <button class="buttons" id="erase" onclick="eraseDiacritics()">Erase Diacritics</button>
             <button class="buttons" id="copy" onclick="copyToClipboard()">Copy to Clipboard</button>
         </div>
+        <div id="copied-notice">Text copied</div>
     </main>
 
     <footer>
