added animation & slightly adjusted font sizes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <body>
     <header>
-        <h1>Diacritics Eraser</h1>
+        <h1 class="title-display">Diacritics Erase</h1>
+        <h1 class="title-display" id="erasing-r">r</h1>
     </header>
 
     <main>
@@ -32,7 +33,12 @@
             <button class="buttons" id="copy" onclick="copyToClipboard()">Copy to Clipboard</button>
         </div>
         <div id="copied-notice">Text copied</div>
-        <div class="about">This is a simple tool to convert diacritics, ligatures, and other special characters into the basic set of 26 English letters popularly used in contemporary times. But with this tool comes the plea for English-language users to broaden their linguistic horizons to incorporate more than these mere 26 unadorned letters. The English language itself has a richer variety of characters that have been largely lost to time, and the ability to handle more than the standard character set is a boon in handling words from other languages as well.</div>
+        <div class="about">This is a simple tool to convert diacritics, ligatures, and other special characters into the
+            basic set of 26 English letters popularly used in contemporary times. But with this tool comes the plea for
+            English-language users to broaden their linguistic horizons to incorporate more than these mere 26 unadorned
+            letters. The English language itself has a richer variety of characters that have been largely lost to time,
+            and the ability to handle more than the standard character set is a boon in handling words from other
+            languages as well.</div>
     </main>
 
     <footer>
