--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <textarea id="textbox"></textarea>
+        <textarea id="textbox" aria-label="text"></textarea>
 
         <div class="button-area">
             <button class="buttons" id="erase" onclick="eraseDiacritics()">Erase Diacritics</button>
