--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     </main>
 
     <footer>
-        <p>© 2022 M.J. Brechner</p>
+        <p>© 2022 <a href="https://github.com/mjbrechner">M.J. Brechner</a></p>
+        <img class="profile-pic" src="images/profile-pic.png">
     </footer>
 
     <script src="javascript/index.js" async defer></script>
