--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Diacritics Eraser</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Favicons created by M.J. Brechner © 2022 -->
     <link rel="shortcut icon" href="images/favicon-32.png" sizes="32x32">
     <link rel="shortcut icon" href="images/favicon-128.png" sizes="128x128">
     <link rel="shortcut icon" href="images/favicon-180.png" sizes="180x180">
@@ -43,6 +44,7 @@
 
     <footer>
         <p>© 2022 <a href="https://github.com/mjbrechner">M.J. Brechner</a></p>
+        <!-- Profile picture created by M.J. Brechner © 2022 -->
         <img class="profile-pic" src="images/profile-pic.png">
     </footer>
 
