--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     </main>
 
     <footer>
-        <p>© 2022 <a href="https://github.com/mjbrechner">M.J. Brechner</a></p>
+        <p>
+            <script>document.write(`Copyright © 2022-${new Date().getFullYear()} `);</script>
+            <a href="https://github.com/mjbrechner">M.J. Brechner</a>
+        </p>
         <!-- Profile picture created by M.J. Brechner © 2022 -->
         <img class="profile-pic" src="images/profile-pic.png">
     </footer>
