added a button to clear all text

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="button-area">
             <button class="buttons" id="erase" onclick="eraseDiacritics()">Erase Diacritics</button>
             <button class="buttons" id="copy" onclick="copyToClipboard()">Copy to Clipboard</button>
+            <button class="buttons" id="copy" onclick="clearText()">Clear Text</button>
         </div>
         <div id="copied-notice">Text copied</div>
         <div class="about">This is a simple tool to convert diacritics, ligatures, and other special characters into the
