added ability to convert apostrophe variations

--- a/index.html
+++ b/index.html
@@ -41,11 +41,18 @@
             letters. The English language itself has a richer variety of characters that have been largely lost to time,
             and the ability to handle more than the standard character set is a boon in handling words from other
             languages as well.</div>
+            <br>
+        <div class="about" id="update">Update (23 March 2023): The Diacritics Eraser now also converts variations on the apostrophe
+            – specifically the typographic or curly apostrophe (’) and the modified letter apostrophe (ʼ) – to become
+            a vertical apostrophe (').
+        </div>
     </main>
 
     <footer>
         <p>
-            <script>document.write(`Copyright © 2022-${new Date().getFullYear()} `);</script>
+            <script>
+                document.write(`Copyright © 2022-${new Date().getFullYear()} `);
+            </script>
             <a href="https://github.com/mjbrechner">M.J. Brechner</a>
         </p>
         <!-- Profile picture created by M.J. Brechner © 2022 -->
