--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             and the ability to handle more than the standard character set is a boon in handling words from other
             languages as well.</div>
             <br>
-        <div class="about" id="update">Update (23 March 2023): The Diacritics Eraser now also converts variations on the apostrophe
+        <div class="about">The Diacritics Eraser now also converts variations on the apostrophe
             – specifically the typographic or curly apostrophe (’) and the modified letter apostrophe (ʼ) – to become
             a vertical apostrophe (').
         </div>
