--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Diacritics Eraser</title>
-    <meta name="description" content="">
+    <meta name="description" content="Tool to erase diacritics from text">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicons created by M.J. Brechner © 2022 -->
     <link rel="shortcut icon" href="images/favicon-32.png" sizes="32x32">
@@ -40,7 +40,8 @@
             English-language users to broaden their linguistic horizons to incorporate more than these mere 26 unadorned
             letters. The English language itself has a richer variety of characters that have been largely lost to time,
             and the ability to handle more than the standard character set is a boon in handling words from other
-            languages as well.</div>
+            languages as well. This tool also converts characters as <i>æ</i>, <i>œ</i>, and <i>ß</i> to <i>ae</i>, <i>oe</i>,
+            and <i>ss</i>, respectively.</div>
             <br>
         <div class="about">The Diacritics Eraser now also converts variations on the apostrophe
             – specifically the typographic or curly apostrophe (’) and the modified letter apostrophe (ʼ) – to become
