added Space Adder

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <header>
         <h1 class="title-display">Diacritics Erase</h1>
         <h1 class="title-display" id="erasing-r">r</h1>
+        <a class="linker" href="space-adder.html">Space Adder</a>
     </header>
 
     <main>
