--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
         <div class="button-area">
             <button class="buttons" id="erase" onclick="eraseDiacritics()">Erase Diacritics</button>
+            <button class="buttons" id="erase" onclick="convertGermanDiacritics()">Convert German Diacritics</button>
+            <button class="buttons" id="erase" onclick="convertEsperantoDiacritics()">Convert Esperanto Diacritics</button>
             <button class="buttons" id="copy" onclick="copyToClipboard()">Copy to Clipboard</button>
             <button class="buttons" id="copy" onclick="clearText()">Clear Text</button>
         </div>
