--- a/languages.html
+++ b/languages.html
@@ -38,9 +38,8 @@
     <main>
         <textarea id="textbox" aria-label="text"></textarea>
         <div class="button-area">
-            <button class="buttons" id="erase" onclick="convertGermanDiacritics()">Convert German Diacritics</button>
-            <button class="buttons" id="erase" onclick="convertEsperantoDiacritics()">Convert Esperanto
-                Diacritics</button>
+            <button class="buttons" id="erase" onclick="convertGermanDiacritics()">Transliterate German</button>
+            <button class="buttons" id="erase" onclick="convertEsperantoDiacritics()">Transliterate Esperanto</button>
             <button class="buttons" id="copy" onclick="copyToClipboard()">Copy to Clipboard</button>
             <button class="buttons" id="copy" onclick="clearText()">Clear Text</button>
         </div>
