--- a/languages.html
+++ b/languages.html
@@ -58,7 +58,7 @@
             <a href="https://github.com/mjbrechner">M.J. Brechner</a>
         </p>
         <!-- Profile picture created by M.J. Brechner © 2022 -->
-        <img class="profile-pic" src="images/profile-pic.png">
+        <img class="profile-pic" alt="MJ Brechner profile picture" src="images/profile-pic.png">
     </footer>
 
     <script src="javascript/index.js" async defer></script>
